--- a/front/src/index.css
+++ b/front/src/index.css
@@ -50,12 +50,17 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: rgba(46, 242, 39, 0.12);
+  
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: background-color 0.25s;
+  font-weight: 300; /* Light */
 }
 button:hover {
-  border-color: #646cff;
+  
+  background-color: #1a1a1a;
+  text-decoration-color: #269640;
+ 
 }
 button:focus,
 button:focus-visible {
