--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,14 +1,16 @@
 
 @import "tailwindcss";
 
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(22, 221, 49, 0.87);
-  background-color: #242424;
+  color:  #f2f2f3;
+  background-color: #10120F;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -21,13 +23,18 @@ a {
   color: #f2f2f3;
   text-decoration: inherit;
  
-  transition: color 0.25s, text-decoration-color 0.25s;
+  transition: color 0.25s;
  
 
 }
 a:hover {
-  color: #269640;
-
+  color: rgba(5, 44, 3, 0.842);
+  background-color: #f2f2f3;
+  border-radius: 49.433px;;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  transition: color 0.25s;
+  transition: cubic-bezier(0.075, 0.2, 0.165,1 ) 0.5s;
 }
 
 body {
@@ -38,47 +45,37 @@ body {
   min-height: 100vh;
 }
 
-h1 {
+h2 {
   font-size: 3.2em;
   line-height: 1.1;
+  font-family: 'Anybody';
 }
 
 button {
-  border-radius: 8px;
+  color: #f2f2f3;
+  border-radius: 49.433px;;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
-  font-weight: 500;
+  font-weight: 600;
   font-family: inherit;
   background-color: rgba(46, 242, 39, 0.12);
   
   cursor: pointer;
-  transition: background-color 0.25s;
+  transition: background-color 0.5s;
   font-weight: 300; /* Light */
 }
+
+
 button:hover {
-  
-  background-color: #1a1a1a;
-  text-decoration-color: #269640;
+
+  background-color:  #f2f2f3;
+  color: #123414;
  
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+
   li {
     display: inline-block; /* or use inline */
     margin-right: 15px; 
-  }}
+  }
