--- a/front/src/index.css
+++ b/front/src/index.css
@@ -2,6 +2,7 @@
 @import "tailwindcss";
 
 
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -25,16 +26,14 @@ a {
  
   transition: color 0.25s;
  
+ 
 
 }
 a:hover {
-  color: rgba(5, 44, 3, 0.842);
-  background-color: #f2f2f3;
-  border-radius: 49.433px;;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  color: rgba(37, 178, 30, 0.842);
+ 
   transition: color 0.25s;
-  transition: cubic-bezier(0.075, 0.2, 0.165,1 ) 0.5s;
+
 }
 
 body {
@@ -64,18 +63,31 @@ button {
   cursor: pointer;
   transition: background-color 0.5s;
   font-weight: 300; /* Light */
+
+  
+ 
+
 }
 
 
 button:hover {
+  
 
   background-color:  #f2f2f3;
   color: #123414;
- 
-}
-
+  border: 1px solid transparent;
+  }
 
   li {
     display: inline-block; /* or use inline */
-    margin-right: 15px; 
+    margin-right: 0px; 
+    margin-left: 60px;
+   
   }
+  ul {
+    display: inline-block;
+    position:absolute;
+    top: 30px;   /* Moves the element 20px down */
+    left: 750px; 
+  }
+ 
