--- a/front/src/index.css
+++ b/front/src/index.css
@@ -158,54 +158,43 @@ body {
 .image-up {
 
   position: absolute;
-  top: 630px;
-  left: 400px;
+  top: 780px;
+  left: 380px;
 
   border: dashed 3px #f2f2f3;
   border-width: 2px 2px 2px 2px;
+
   background-color: #04420f41;
   border-radius: 20px;
-padding-top: 10px;
-  padding-left: 200px;
+ 
+  padding-left: 190px;
 
   cursor: pointer;
   font-size: 40px;
   display: flex;
-  width: 439.281px;
-  height: 85.291px;
+  width: 419.281px;
+  height: 70.291px;
 
 border-radius: 8.337px;
-border: 1.283px dashed #7AC577;
+border: 1.5px dashed #43ff6637 !important;
 
-background: rgba(255, 255, 255, 0.04);
-box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.25);
-
-}
-
-.titreimg{
-  font-size: 20px;
-  font-family: 'Kanit', sans-serif;
-  font-weight: 500;  /* Medium */
- padding-bottom: 7px ;
-
-
-  position: absolute;
-  top: 580px;
-  left: 530px;
-  z-index: 10; /* Set z-index to a higher value */
+background: rgba(95, 164, 102, 0.04);
+box-shadow: 1px 1px 1px rgba(9, 37, 17, 0.4);
 
 }
+
+
 .container{
  
-  background: rgba(23, 53, 27, 0.04);
+  background: rgba(34, 121, 43, 0.046);
 
   z-index: -1;
 
   position: absolute;
-  top: 570px;
+  top: 680px;
   left: 240px;
-  width: 750px;
-  height: 553.385px;
+  width: 710px;
+  height: 513.385px;
 
   border-color: #f2f2f33b;
   border-width: 2px; /* Add border width /
@@ -215,14 +204,51 @@ box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.25);
 
 }
 
-.image-up-text{
-  font-size: 20px;
+.container-title {
+
+  padding-top: 40px;
+  padding-left: 260px;
+  font-size: 24px;
   font-family: 'Kanit', sans-serif;
-  font-weight: 500;  /* Medium */
- padding-bottom: 7px ;
-padding-top: -10px;
+  font-weight: 100;
+  margin-bottom: 20px;
+  color: #e6f4e9;
+}
+
+.container-text-title{
+
+  padding-top: 130px;
+
+  padding-left: 260px;
+  font-size: 24px;
+  font-family: 'Kanit', sans-serif;
+  font-weight: 300;
+
+  color: #e6f4e9;
+
+}
+
+.text-input {
+  width: 419.281px;
+  height: 130px;
+
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  margin-bottom: 20px;
+  font-size: 16px;
+  color: #ffffff94;
+
   position: absolute;
-  top: 630px;
-  left: 530px;
-  z-index: 10; /* Set z-index to a higher value */
+  top: 950px;
+  left: 380px;
+}
+
+
+.submit-button{
+
+  position: absolute;
+  top: 1140px;
+  left: 580px;
+
 }
