--- a/front/src/index.css
+++ b/front/src/index.css
@@ -12,7 +12,7 @@
 
   color-scheme: light dark;
   color:  #f2f2f3;
-  background-color: #0a1205;
+  background-color: #040802;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -134,6 +134,24 @@ body {
   z-index: -1;
 }
 
+
+.bg4{
+  width: 700px;
+  height: 700px;
+  position:absolute;
+  top: 900px; 
+  left: 1000px; 
+  z-index: -1;
+}
+.bg5{
+  width: 700px;
+  height: 700px;
+  position:absolute;
+  top: 1400px; 
+  left: -120px; 
+  z-index: -1;
+}
+
 .spline-container {
   position: absolute;
   top: 30px;
@@ -248,7 +266,25 @@ box-shadow: 1px 1px 1px rgba(9, 37, 17, 0.4);
 .submit-button{
 
   position: absolute;
-  top: 1140px;
-  left: 580px;
+  top: 1100px;
+  left: 540px;
 
+  color: #053411;
+  font-weight: 500;
+  border-radius: 49.433px;;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  
+  font-family: inherit;
+  background-color: #43ff64d9 ;
+  cursor: pointer;
+  transition: background-color 0.5s;
 }
+
+.submit-button:hover {
+  font-weight: 500;
+  background-color:  #f2f2f3 !important;
+  color: #123414 !important;
+  border: 1px solid transparent !important;
+  }
