--- a/front/src/index.css
+++ b/front/src/index.css
@@ -59,7 +59,7 @@ body {
 .landin {
   color: #053411;
   font-weight: 500;
-  border-radius: 49.433px;;
+  border-radius: 49.433px !important;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -169,7 +169,8 @@ body {
   font-family: 'Kanit', sans-serif;
   font-weight: 700;  /* Medium */
  padding-bottom: 7px ;
-  margin-top: 70px;
+ position: absolute;
+  top: 200px;
 }
 
 
@@ -354,4 +355,26 @@ box-shadow: 1px 1px 1px rgba(9, 37, 17, 0.4);
   color: #123414 !important;
   border: 1px solid transparent !important;
   }
+.hide{
+  position: absolute;
+  top: 600px;
+  left: 450px;
+ font-weight: 700;
+ font-size: 40px;
+  font-family: 'Kanit', sans-serif;
 
+  margin-bottom: 20px;
+  color: #e6f4e9;
+
+}
+.show{
+  position: absolute;
+  top: 1300px;
+  left: 450px;
+ font-weight: 700;
+ font-size: 40px;
+  font-family: 'Kanit', sans-serif;
+
+  margin-bottom: 20px;
+  color: #e6f4e9;
+}
