--- a/front/src/index.css
+++ b/front/src/index.css
@@ -158,7 +158,7 @@ body {
   left: 300px;
   width: 100%;
   height: 100%;
-  z-index: -1;
+  z-index: -10;
 }
 
 
@@ -449,4 +449,5 @@ box-shadow: 1px 1px 1px rgba(9, 37, 17, 0.4);
   font-weight: 100;
   margin-bottom: 20px;
   color: #e6f4e9;
+  cursor: pointer;
 }
